Fix Java weak reference nullification in MediaSessionAndroid

This CL fixes a Java weak reference nullification issue which happens
when a garbage collection is run between garbage collecting Java
WebContents and MediaSessionAndroid destruction. MediaSessionAndroid
should always unset the Java weak reference when receiving
MediaSessionDestroyed().

This CL also re-enables a flaky test disabled previously due to this
issue.

BUG=661444
TBR=tedchoc@chromium.org

Review-Url: https://codereview.chromium.org/2477513002
Cr-Commit-Position: refs/heads/master@{#429476}

Former-commit-id: 05e950493073776c3f1817cbe11df728c04ebeae